<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/custom_dialog_lr_margin"
        android:layout_marginRight="@dimen/custom_dialog_lr_margin"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/hit"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/texttitle" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialogMessage" 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/dialog_default_message"
                android:textColor="@color/texttitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialogCancleButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/commit_bt_selector"
                android:text="@string/cancle"
                 />

            <Button
                android:id="@+id/dialogSureButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/commit_bt_selector"
                android:text="@string/sure"
                 />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp" />
    </LinearLayout>

</RelativeLayout>